k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nizam
  labels:
    app.kubernetes.io/part-of: nizam-cop
